k8s/opencampus/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencampus-web
  namespace: opencampus
spec:
  selector:
    app: opencampus-web
  ports:
    - port: 3000
      targetPort: 3000
