k8s/opencampus/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencampus-web
  namespace: opencampus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - opencampus.json-server.win
      secretName: opencampus-web-tls
  rules:
    - host: opencampus.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencampus-web
                port:
                  number: 3000
